# AudioLLMArena

./: .gitmodules  README.md  app.py  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  vram_measure_log.txt  vram_results.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
api/: server.py
containers/audio_flamingo/: Dockerfile
containers/audio_omni/: Dockerfile  pyproject.toml
containers/gemma4_e4b/: Dockerfile
containers/mimo_audio/: Dockerfile  pyproject.toml
containers/moss_audio/: Dockerfile
containers/qwen2_audio/: Dockerfile
containers/qwen3_omni/: Dockerfile
containers/salmonn_13b/: Dockerfile
containers/step_audio_r1/: Dockerfile
docs/superpowers/plans/: 2026-04-17-audio-llm-arena-phase1.md
docs/superpowers/specs/: 2026-04-17-audio-llm-arena-design.md
models/: __init__.py  audio_omni.py  base.py  mimo_audio.py  moss_audio.py  qwen2_audio.py  salmonn_13b.py
tests/: conftest.py  test_audio_flamingo_api.py  test_audio_omni_api.py  test_gemma4_e4b_api.py  test_mimo_audio.py  test_mimo_audio_api.py  test_moss_audio_api.py  test_qwen2_audio.py  test_qwen2_audio_api.py  test_qwen3_omni_api.py  test_registry.py  test_salmonn_13b_api.py  test_step_audio_r1_api.py
