[project]
name = "arena-audio-omni"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Inference API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    # Model + framework
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.0",
    "accelerate>=1.6.0",
    "huggingface_hub>=0.30.0",
    "qwen-omni-utils>=0.0.9",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "einops>=0.7.0",
    # Audio I/O
    "soundfile",
    "librosa>=0.9.0",
    "soxr>=0.3.0",
    "scipy>=1.13.0",
    # Audio-Omni (pulls in mmaudio and generation deps)
    "audio-omni",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
audio-omni = { git = "https://github.com/ZeyueT/Audio-Omni.git" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
