[project]
name = "arena-mimo-audio"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Inference API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    # Audio I/O
    "audioread>=3.0.0",
    "librosa>=0.11.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "soundfile>=0.13.0",
    # Model (torch 2.7+ required for SM 12.0 / Blackwell support)
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers==4.49.0",
    "accelerate>=1.9.0",
    "safetensors>=0.4.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.60.0",
    "einops>=0.8.0",
    "zhon>=2.1.1",
    "httpx>=0.28.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
